--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 #
 #
-# Copyright (c) 2014 LIPN - Universite Paris 13
+# Copyright (c) 2014-2019 LIPN - Universite Paris 13
 #                    All rights reserved.
 #
 # This file is part of POSH.
@@ -20,7 +20,15 @@
 #
 #
 
+#################################################################################
+# Library
+#################################################################################
+
 lib_LTLIBRARIES = libshmem.la
+
+#################################################################################
+# Sources
+#################################################################################
 
 libshmem_la_SOURCES = shmem_accessible.cpp   shmem_lock.cpp 		\
 		shmem_alloc.cpp        shmem_MeMyselfAndI_implem.cpp    \
@@ -32,7 +40,61 @@ libshmem_la_SOURCES = shmem_accessible.cpp   shmem_lock.cpp 		\
 		shmem_init.cpp         shmem_reduce.cpp			\
 		shmem_utils.cpp
 
+
+#################################################################################
+# RTE, interface with the Launcher
+#################################################################################
+
+libshmem_la_SOURCES += posh_launcher.h
+if ENABLE_LAUNCHERLOCAL
+	libshmem_la_SOURCES += posh_launcher_sm.cpp posh_launcher_sm.h
+endif
+if ENABLE_LAUNCHERMPI
+	libshmem_la_SOURCES += posh_launcher_mpi.cpp posh_launcher_mpi.h
+endif
+if ENABLE_LAUNCHERPADICO
+	libshmem_la_SOURCES += posh_launcher_padico.cpp posh_launcher_padico.h
+endif
+
+#################################################################################
+# Communication channel
+#################################################################################
+
+libshmem_la_SOURCES += posh_neighbor.h posh_heap.h posh_communication.h
+libshmem_la_SOURCES += posh_sm.cpp posh_sm.h
+
+if ENABLE_COMM_TCP
+	libshmem_la_SOURCES +=ked_tcp.cpp ked_tcp.h posh_tcp.cpp posh_tcp.h shmem_tcp.cpp shmem_tcp.h
+endif
+if ENABLE_COMM_MPI
+	libshmem_la_SOURCES += posh_mpi.cpp posh_mpi.h
+endif
+if ENABLE_COMM_NMAD
+	libshmem_la_SOURCES += posh_nmad.cpp posh_nmad.h
+endif
+if ENABLE_COMM_KNEM
+	libshmem_la_SOURCES += posh_knem.cpp posh_knem.h
+endif
+
+#################################################################################
+# Fault tolerance
+#################################################################################
+
+# TODO
+
+#################################################################################
+# Performance profiling
+#################################################################################
+
+#################################################################################
+# Compilation information
+#################################################################################
+
 libshmem_la_LDFLAGS = -version-info 0:2:0
+
+#################################################################################
+# Binaries: local launcher and pre-compiler
+#################################################################################
 
 bin_PROGRAMS = spawn shmem_s2sc 
 
