--- a/configure.ac
+++ b/configure.ac
@@ -42,6 +42,15 @@ AC_LANG([C++])
 
 LIBS="$LIBS"
 
+# CHECK FOR FLEX (required to compile the source-to-source precompiler)
+
+AC_PROG_LEX
+if test "x$LEX" != xflex; then
+   LEX="$SHELL $missing_dir/missing flex"
+   AC_SUBST([LEX_OUTPUT_ROOT], [lex.yy])
+   AC_SUBST([LEXLIB], [''])
+fi
+
 #################################################################################
 # Boost
 #################################################################################
